--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "exceljs": "^4.4.0",
+    "resend": "^6.6.0",
     "tailwindcss": "^4.1.18"
   }
 }
