--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^7.2.6"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/vite": "^4.1.18",
     "exceljs": "^4.4.0",
     "resend": "^6.6.0",
